--- a/FrontEnd/styles/colors.scss
+++ b/FrontEnd/styles/colors.scss
@@ -1,28 +1,27 @@
-/* Copyright 2020-2021 Dave Verwer, Sven A. Schmidt, and other contributors.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2020-2021 Dave Verwer, Sven A. Schmidt, and other contributors.
+//
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+//
+//     http://www.apache.org/licenses/LICENSE-2.0
+//
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
 
-/* -------------------------------------------------------------------------
-  Color variables for both light and dark mode.
----------------------------------------------------------------------------- */
+// -------------------------------------------------------------------------
+// Color variables for both light and dark mode.
+// -------------------------------------------------------------------------
 
-/* Light mode */
+// Light mode.
 
 :root {
-    /* ----------------------------------------
-    Raw colours
-  ------------------------------------------- */
+    // -------------------------------------------------------------------------
+    // Raw colours.
+    // -------------------------------------------------------------------------
 
     --very-dark-blue: #111930;
     --dark-blue: #232339;
@@ -54,9 +53,9 @@
 
     --twitter-blue: #1d9bf0;
 
-    /* ----------------------------------------
-    Semantic colours
-  ------------------------------------------- */
+    // -------------------------------------------------------------------------
+    // Semantic colours.
+    // -------------------------------------------------------------------------
 
     --page-text: var(--black);
     --page-dimmed-text: var(--grey);
@@ -150,13 +149,13 @@
     --keyword-count-background: rgba(0, 0, 0, 10%);
 }
 
-/* Dark mode */
+// Dark mode.
 
 @media (prefers-color-scheme: dark) {
     :root {
-        /* ----------------------------------------
-      Raw colours
-    ------------------------------------------- */
+        // -------------------------------------------------------------------------
+        // Raw colours.
+        // -------------------------------------------------------------------------
 
         --black: #070710;
         --very-very-dark-grey: #0e0e19;
@@ -173,9 +172,9 @@
         --mid-green: #0ebf4c;
         --light-green: #96ff4c;
 
-        /* ----------------------------------------
-      Semantic colours
-    ------------------------------------------- */
+        // -------------------------------------------------------------------------
+        // Semantic colours.
+        // -------------------------------------------------------------------------
 
         --page-text: var(--white);
         --page-background: var(--black);
