--- a/FrontEnd/styles/github_highlighting.scss
+++ b/FrontEnd/styles/github_highlighting.scss
@@ -1,171 +1,171 @@
-/* -------------------------------------------------------------------------
-  Syntax highlighting to match the rendered GitHub README files.
-  MIT Licensed Sources:
-   - https://github.com/primer/github-syntax-light
-   - https://github.com/primer/github-syntax-dark
----------------------------------------------------------------------------- */
+// -------------------------------------------------------------------------
+// Syntax highlighting to match the rendered GitHub README files.
+//   MIT Licensed Sources:
+//     - https://github.com/primer/github-syntax-light
+//     - https://github.com/primer/github-syntax-dark
+// -------------------------------------------------------------------------
 
-/*!
- * GitHub Light v0.5.0
- * Copyright (c) 2012 - 2017 GitHub, Inc.
- * Licensed under MIT (https://github.com/primer/github-syntax-theme-generator/blob/master/LICENSE)
- */
+// -------------------------------------------------------------------------
+// GitHub Light v0.5.0
+// Copyright (c) 2012 - 2017 GitHub, Inc.
+// Licensed under MIT (https://github.com/primer/github-syntax-theme-generator/blob/master/LICENSE)
+// -------------------------------------------------------------------------
 
-.pl-c /* comment, punctuation.definition.comment, string.comment */ {
+.pl-c {
     color: #6a737d;
 }
 
-.pl-c1 /* constant, entity.name.constant, variable.other.constant, variable.language, support, meta.property-name, support.constant, support.variable, meta.module-reference, markup.raw, meta.diff.header, meta.output */,
-.pl-s .pl-v /* string variable */ {
+.pl-c1,
+.pl-s .pl-v {
     color: #005cc5;
 }
 
-.pl-e /* entity */,
-.pl-en /* entity.name */ {
+.pl-e,
+.pl-en {
     color: #6f42c1;
 }
 
-.pl-smi /* variable.parameter.function, storage.modifier.package, storage.modifier.import, storage.type.java, variable.other */,
-.pl-s .pl-s1 /* string source */ {
+.pl-smi,
+.pl-s .pl-s1 {
     color: #24292e;
 }
 
-.pl-ent /* entity.name.tag, markup.quote */ {
+.pl-ent {
     color: #22863a;
 }
 
-.pl-k /* keyword, storage, storage.type */ {
+.pl-k {
     color: #d73a49;
 }
 
-.pl-s /* string */,
-.pl-pds /* punctuation.definition.string, source.regexp, string.regexp.character-class */,
-.pl-s .pl-pse .pl-s1 /* string punctuation.section.embedded source */,
-.pl-sr /* string.regexp */,
-.pl-sr .pl-cce /* string.regexp constant.character.escape */,
-.pl-sr .pl-sre /* string.regexp source.ruby.embedded */,
-.pl-sr .pl-sra /* string.regexp string.regexp.arbitrary-repitition */ {
+.pl-s,
+.pl-pds,
+.pl-s .pl-pse .pl-s1,
+.pl-sr,
+.pl-sr .pl-cce,
+.pl-sr .pl-sre,
+.pl-sr .pl-sra {
     color: #032f62;
 }
 
-.pl-v /* variable */,
-.pl-smw /* sublimelinter.mark.warning */ {
+.pl-v,
+.pl-smw {
     color: #e36209;
 }
 
-.pl-bu /* invalid.broken, invalid.deprecated, invalid.unimplemented, message.error, brackethighlighter.unmatched, sublimelinter.mark.error */ {
+.pl-bu {
     color: #b31d28;
 }
 
-.pl-ii /* invalid.illegal */ {
+.pl-ii {
     color: #fafbfc;
     background-color: #b31d28;
 }
 
-.pl-c2 /* carriage-return */ {
+.pl-c2 {
     color: #fafbfc;
     background-color: #d73a49;
 }
 
-.pl-c2::before /* carriage-return */ {
+.pl-c2::before {
     content: '^M';
 }
 
-.pl-sr .pl-cce /* string.regexp constant.character.escape */ {
+.pl-sr .pl-cce {
     font-weight: bold;
     color: #22863a;
 }
 
-.pl-ml /* markup.list */ {
+.pl-ml {
     color: #735c0f;
 }
 
-.pl-mh /* markup.heading */,
-.pl-mh .pl-en /* markup.heading entity.name */,
-.pl-ms /* meta.separator */ {
+.pl-mh,
+.pl-mh .pl-en,
+.pl-ms {
     font-weight: bold;
     color: #005cc5;
 }
 
-.pl-mi /* markup.italic */ {
+.pl-mi {
     font-style: italic;
     color: #24292e;
 }
 
-.pl-mb /* markup.bold */ {
+.pl-mb {
     font-weight: bold;
     color: #24292e;
 }
 
-.pl-md /* markup.deleted, meta.diff.header.from-file, punctuation.definition.deleted */ {
+.pl-md {
     color: #b31d28;
     background-color: #ffeef0;
 }
 
-.pl-mi1 /* markup.inserted, meta.diff.header.to-file, punctuation.definition.inserted */ {
+.pl-mi1 {
     color: #22863a;
     background-color: #f0fff4;
 }
 
-.pl-mc /* markup.changed, punctuation.definition.changed */ {
+.pl-mc {
     color: #e36209;
     background-color: #ffebda;
 }
 
-.pl-mi2 /* markup.ignored, markup.untracked */ {
+.pl-mi2 {
     color: #f6f8fa;
     background-color: #005cc5;
 }
 
-.pl-mdr /* meta.diff.range */ {
+.pl-mdr {
     font-weight: bold;
     color: #6f42c1;
 }
 
-.pl-ba /* brackethighlighter.tag, brackethighlighter.curly, brackethighlighter.round, brackethighlighter.square, brackethighlighter.angle, brackethighlighter.quote */ {
+.pl-ba {
     color: #586069;
 }
 
-.pl-sg /* sublimelinter.gutter-mark */ {
+.pl-sg {
     color: #959da5;
 }
 
-.pl-corl /* constant.other.reference.link, string.other.link */ {
+.pl-corl {
     text-decoration: underline;
     color: #032f62;
 }
 
 @media (prefers-color-scheme: dark) {
-    /*!
- * GitHub Dark v0.5.0
- * Copyright (c) 2012 - 2017 GitHub, Inc.
- * Licensed under MIT (https://github.com/primer/github-syntax-theme-generator/blob/master/LICENSE)
- */
+    // -------------------------------------------------------------------------
+    // GitHub Dark v0.5.0
+    // Copyright (c) 2012 - 2017 GitHub, Inc.
+    // Licensed under MIT (https://github.com/primer/github-syntax-theme-generator/blob/master/LICENSE)
+    // -------------------------------------------------------------------------
 
-    .pl-c /* comment, punctuation.definition.comment, string.comment */ {
+    .pl-c {
         color: #959da5;
     }
 
     .pl-c1,
-    .pl-s .pl-v /* string variable */ {
+    .pl-s .pl-v {
         color: #c8e1ff;
     }
 
     .pl-e,
-    .pl-en /* entity.name */ {
+    .pl-en {
         color: #b392f0;
     }
 
     .pl-smi,
-    .pl-s .pl-s1 /* string source */ {
+    .pl-s .pl-s1 {
         color: #f6f8fa;
     }
 
-    .pl-ent /* entity.name.tag */ {
+    .pl-ent {
         color: #7bcc72;
     }
 
-    .pl-k /* keyword, storage, storage.type */ {
+    .pl-k {
         color: #ea4a5a;
     }
 
@@ -175,93 +175,93 @@
     .pl-sr,
     .pl-sr .pl-cce,
     .pl-sr .pl-sre,
-    .pl-sr .pl-sra /* string.regexp string.regexp.arbitrary-repitition */ {
+    .pl-sr .pl-sra {
         color: #79b8ff;
     }
 
     .pl-v,
-    .pl-ml /* markup.list, sublimelinter.mark.warning */ {
+    .pl-ml {
         color: #fb8532;
     }
 
-    .pl-bu /* invalid.broken, invalid.deprecated, invalid.unimplemented, message.error, brackethighlighter.unmatched, sublimelinter.mark.error */ {
+    .pl-bu {
         color: #d73a49;
     }
 
-    .pl-ii /* invalid.illegal */ {
+    .pl-ii {
         color: #fafbfc;
         background-color: #d73a49;
     }
 
-    .pl-c2 /* carriage-return */ {
+    .pl-c2 {
         color: #fafbfc;
         background-color: #d73a49;
     }
 
-    .pl-c2::before /* carriage-return */ {
+    .pl-c2::before {
         content: '^M';
     }
 
-    .pl-sr .pl-cce /* string.regexp constant.character.escape */ {
+    .pl-sr .pl-cce {
         font-weight: bold;
         color: #7bcc72;
     }
 
     .pl-mh,
     .pl-mh .pl-en,
-    .pl-ms /* meta.separator */ {
+    .pl-ms {
         font-weight: bold;
         color: #0366d6;
     }
 
-    .pl-mi /* markup.italic */ {
+    .pl-mi {
         font-style: italic;
         color: #f6f8fa;
     }
 
-    .pl-mb /* markup.bold */ {
+    .pl-mb {
         font-weight: bold;
         color: #f6f8fa;
     }
 
-    .pl-md /* markup.deleted, meta.diff.header.from-file, punctuation.definition.deleted */ {
+    .pl-md {
         color: #b31d28;
         background-color: #ffeef0;
     }
 
-    .pl-mi1 /* markup.inserted, meta.diff.header.to-file, punctuation.definition.inserted */ {
+    .pl-mi1 {
         color: #176f2c;
         background-color: #f0fff4;
     }
 
-    .pl-mc /* markup.changed, punctuation.definition.changed */ {
+    .pl-mc {
         color: #b08800;
         background-color: #fffdef;
     }
 
-    .pl-mi2 /* markup.ignored, markup.untracked */ {
+    .pl-mi2 {
         color: #2f363d;
         background-color: #959da5;
     }
 
-    .pl-mdr /* meta.diff.range */ {
+    .pl-mdr {
         font-weight: bold;
         color: #b392f0;
     }
 
-    .pl-mo /* meta.output */ {
+    .pl-mo {
         color: #0366d6;
     }
 
-    .pl-ba /* brackethighlighter.tag, brackethighlighter.curly, brackethighlighter.round, brackethighlighter.square, brackethighlighter.angle, brackethighlighter.quote */ {
+    .pl-ba {
         color: #ffeef0;
     }
 
-    .pl-sg /* sublimelinter.gutter-mark */ {
+    .pl-sg {
         color: #6a737d;
     }
 
-    .pl-corl /* constant.other.reference.link, string.other.link */ {
+    .pl-corl {
         text-decoration: underline;
         color: #79b8ff;
     }
