--- a/FrontEnd/styles/search.scss
+++ b/FrontEnd/styles/search.scss
@@ -1,24 +1,22 @@
-/* Copyright 2020-2021 Dave Verwer, Sven A. Schmidt, and other contributors.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2020-2021 Dave Verwer, Sven A. Schmidt, and other contributors.
+//
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+//
+//     http://www.apache.org/licenses/LICENSE-2.0
+//
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
 
-/* -------------------------------------------------------------------------
-  All styling related to the fields that initiate searches.
----------------------------------------------------------------------------- */
+// -------------------------------------------------------------------------
+// All styling related to the fields that initiate searches.
+// -------------------------------------------------------------------------
 
-/* Common search styles affecting both the home page/search page and
-   the nav bar search. */
+// Common styles affecting both the home page/search page and the nav bar search.
 
 section.search,
 nav > ul > li.search {
@@ -44,7 +42,7 @@ nav > ul > li.search {
             }
 
             &::-webkit-search-cancel-button {
-                -webkit-appearance: none; // remove the default "clear" button style.
+                -webkit-appearance: none; // Remove the default "clear" button style.
                 width: 15px;
                 height: 15px;
                 background-position: center center;
@@ -67,7 +65,7 @@ nav > ul > li.search {
     }
 }
 
-/* Search styles specific to the home page/search page form. */
+// Search styles specific to the home page/search page form.
 
 section.search {
     margin: 0;
@@ -109,7 +107,7 @@ section.search {
     }
 }
 
-/* Search styles specific to the nav bar search form. */
+// Search styles specific to the nav bar search form.
 
 nav > ul > li.search {
     & > a {
