Oops, unsaved files are bad.

--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -100,7 +100,7 @@
                 }
             }
 
-            li.has_binary_targets {
+            li.has-binary-targets {
                 grid-column-start: span 2;
                 background-image: var(--image-warning);
             }
