--- a/FrontEnd/docc.scss
+++ b/FrontEnd/docc.scss
@@ -206,35 +206,38 @@ header.spi {
     }
 }
 
-footer.spi nav {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    a {
-        font-weight: 600;
-    }
-
-    ul {
+footer.spi {
+    nav {
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin: 0;
-        padding: 0;
-
-        li {
-            margin: 0 5px;
-            list-style: none;
-        }
+        flex-direction: column;
+        align-items: center;
 
         a {
-            padding: 3px;
-            font-size: 15px;
+            font-weight: 600;
+        }
+
+        ul {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin: 0;
+            padding: 0;
+
+            li {
+                margin: 0 5px;
+                list-style: none;
+            }
+
+            a {
+                padding: 3px;
+                font-size: 15px;
+            }
         }
     }
 
     small {
+        display: block;
         font-size: 13px;
         text-align: center;
     }
