Updated the SCTA with avatars and new wording.

--- a/FrontEnd/styles/colors.scss
+++ b/FrontEnd/styles/colors.scss
@@ -147,6 +147,8 @@
     --big-button-blue-border: var(--light-blue);
 
     --keyword-count-background: rgba(0, 0, 0, 10%);
+
+    --avatar-shadow: 0 2px 3px 5px rgba(0, 0, 0, 5%);
 }
 
 // Dark mode.
