Matching up new image variable names with better naming.

--- a/FrontEnd/styles/build_monitor.scss
+++ b/FrontEnd/styles/build_monitor.scss
@@ -68,7 +68,7 @@
 
                 > span {
                     padding-left: 25px;
-                    background-image: var(--image-succeeded);
+                    background-image: var(--image-build-succeeded);
                 }
             }
 
@@ -77,7 +77,7 @@
 
                 > span {
                     padding-left: 25px;
-                    background-image: var(--image-failed);
+                    background-image: var(--image-build-failed);
                 }
             }
         }
