--- a/FrontEnd/styles/search.scss
+++ b/FrontEnd/styles/search.scss
@@ -59,7 +59,7 @@ nav > ul > li.search {
             background-repeat: no-repeat;
             background-size: 23px;
             background-color: var(--input-background);
-            background-image: var(--image-magnifying-glass);
+            background-image: var(--image-search);
             border: none;
         }
     }
@@ -142,7 +142,7 @@ nav > ul > li.search {
             background-position: center center;
             background-repeat: no-repeat;
             background-size: 20px;
-            background-image: var(--image-magnifying-glass);
+            background-image: var(--image-search);
             border: none;
         }
 
