--- a/FrontEnd/styles/matrix.scss
+++ b/FrontEnd/styles/matrix.scss
@@ -129,7 +129,7 @@
             & > .unknown {
                 background-size: 12px;
                 background-color: var(--grid-default-background);
-                background-image: var(--image-unknown);
+                background-image: var(--image-compatibility-unknown);
             }
 
             & > .compatible {
@@ -165,7 +165,7 @@
                 background-color: var(--grid-succeeded-background);
 
                 a {
-                    background-image: var(--image-succeeded);
+                    background-image: var(--image-build-succeeded);
                 }
             }
 
@@ -173,7 +173,7 @@
                 background-color: var(--grid-failed-background);
 
                 a {
-                    background-image: var(--image-failed);
+                    background-image: var(--image-build-failed);
                 }
             }
         }
