There was a missing image in the Illustrator file!

--- a/FrontEnd/styles/package_list.scss
+++ b/FrontEnd/styles/package_list.scss
@@ -82,7 +82,7 @@
 
             li.has-documentation::before {
                 background-size: 84%;
-                background-image: var(--image-book);
+                background-image: var(--image-documentation);
             }
         }
 
