Fix broken documentation icon.

--- a/FrontEnd/styles/package_list.scss
+++ b/FrontEnd/styles/package_list.scss
@@ -68,6 +68,7 @@
                     height: 9px;
                     margin-right: 2px;
                     background-position: center;
+                    background-repeat: no-repeat;
                     background-size: cover;
                 }
             }
