Changed the icon for `has-binary-targets`.

--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -107,7 +107,7 @@
 
             li.has-binary-targets {
                 grid-column-start: span 2;
-                background-image: var(--image-warning);
+                background-image: var(--image-info);
             }
 
             li.stars {
