Fixed up image name after the great rename.

--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -66,7 +66,7 @@
 
             li.authors {
                 grid-column-start: span 2;
-                background-image: var(--image-person);
+                background-image: var(--image-authors);
             }
 
             li.history {
