--- a/FrontEnd/docc.scss
+++ b/FrontEnd/docc.scss
@@ -93,7 +93,7 @@ header.spi {
                                 background-position: left center;
                                 background-repeat: no-repeat;
                                 background-size: 30px;
-                                background-image: url('/images/logo-medium.svg');
+                                background-image: url('/images/logo.png');
                                 background-clip: padding-box;
                             }
 
