Keep styling consistent.

--- a/FrontEnd/docc.scss
+++ b/FrontEnd/docc.scss
@@ -236,7 +236,8 @@ footer.spi {
         }
     }
 
-    small {
+    small,
+    time {
         display: block;
         font-size: 13px;
         text-align: center;
