--- a/FrontEnd/styles/base.scss
+++ b/FrontEnd/styles/base.scss
@@ -201,7 +201,8 @@ a.download {
         margin: 0;
     }
 
-    small {
+    small,
+    time {
         display: block;
         font-weight: normal;
     }
