--- a/FrontEnd/main.scss
+++ b/FrontEnd/main.scss
@@ -42,3 +42,4 @@ $mobile-breakpoint: 740px;
 @import 'styles/search';
 @import 'styles/spinner';
 @import 'styles/tab_bar';
+@import 'styles/supporters';
