--- a/FrontEnd/styles/supporters.scss
+++ b/FrontEnd/styles/supporters.scss
@@ -23,58 +23,43 @@
 
     section {
         ul {
+            display: grid;
             margin: 60px 0;
+            padding: 0;
+
+            li {
+                display: flex;
+                list-style: none;
+
+                > a {
+                    display: flex;
+                    align-items: center;
+                }
+            }
         }
 
         &.corporate {
             ul {
-                display: grid;
                 grid-template-columns: 1fr 1fr;
-                justify-content: space-between;
-                padding: 0;
 
                 li {
-                    display: inline-flex;
                     justify-content: center;
-                    list-style: none;
-
-                    > a {
-                        display: inline-flex;
-                        flex-direction: column;
-                        align-items: center;
-
-                        &:not(:hover) {
-                            color: var(--page-text);
-                        }
-                    }
                 }
             }
         }
 
         &.community {
             ul {
-                display: grid;
                 grid-template-columns: 1fr 1fr 1fr;
-                justify-content: center;
-                padding: 0;
 
                 li {
-                    list-style: none;
-
-                    > a {
-                        display: flex;
-                        align-items: center;
-
-                        &:not(:hover) {
-                            color: var(--page-text);
-                        }
+                    a:not(:hover) {
+                        color: var(--page-text);
                     }
 
-                    div {
-                        > :not(:first-child) {
-                            font-size: 13px;
-                            color: var(--page-dimmed-text);
-                        }
+                    div > :not(:first-child) {
+                        font-size: 13px;
+                        color: var(--page-dimmed-text);
                     }
 
                     img {
