--- a/FrontEnd/styles/supporters.scss
+++ b/FrontEnd/styles/supporters.scss
@@ -47,6 +47,12 @@
                     justify-content: center;
                 }
             }
+
+            @media screen and (max-width: $mobile-breakpoint) {
+                ul {
+                    grid-template-columns: 1fr;
+                }
+            }
         }
 
         &.community {
@@ -69,6 +75,39 @@
                         border-radius: 50%;
                         box-shadow: var(--avatar-shadow);
                     }
+
+                    @media screen and (max-width: $mobile-breakpoint) {
+                        img {
+                            margin: 0;
+                        }
+
+                        > a {
+                            flex-direction: column;
+                            gap: 10px;
+
+                            > div {
+                                display: flex;
+                                flex-direction: column;
+                                align-items: center;
+                            }
+                        }
+                    }
+                }
+            }
+
+            @media screen and (max-width: $mobile-breakpoint) {
+                ul {
+                    grid-template-columns: 1fr 1fr;
+                }
+            }
+        }
+
+        @media screen and (max-width: $mobile-breakpoint) {
+            ul {
+                gap: 20px;
+
+                li {
+                    justify-content: center;
                 }
             }
         }
