WIP on GitHub CTA.

--- a/FrontEnd/styles/colors.scss
+++ b/FrontEnd/styles/colors.scss
@@ -152,6 +152,11 @@
 
     --ccta-background: var(--very-light-grey);
     --ccta-background-hover: var(--light-grey);
+
+    --ghcta-background: var(--very-dark-grey);
+    --ghcta-border: var(--grey);
+    --ghcta-text: var(--white);
+
     --avatar-shadow: 0 2px 2px 3px rgba(0, 0, 0, 5%);
 }
 
