--- a/FrontEnd/styles/supporters.scss
+++ b/FrontEnd/styles/supporters.scss
@@ -46,6 +46,15 @@
             }
         }
 
+        &.preamble {
+            display: flex;
+            gap: 30px;
+
+            @media screen and (max-width: $mobile-breakpoint) {
+                flex-direction: column;
+            }
+        }
+
         &.corporate,
         &.infrastructure {
             ul {
@@ -108,6 +117,21 @@
                     grid-template-columns: 1fr 1fr;
                 }
             }
+        }
+    }
+
+    .ghcta {
+        background-color: var(--ghcta-background);
+        border-bottom: 3px var(--ghcta-border) solid;
+
+        a {
+            display: block;
+            padding: 70px 10px 10px;
+            color: var(--ghcta-text);
+            background-position: center top 10px;
+            background-repeat: no-repeat;
+            background-size: 50%;
+            background-image: var(--image-ghcta-header);
         }
     }
 }
