--- a/FrontEnd/styles/scta.scss
+++ b/FrontEnd/styles/scta.scss
@@ -161,6 +161,7 @@ body.home {
 }
 
 .ghcta {
+    max-width: 250px;
     background-color: var(--panel-background);
     transition: transform 0.2s ease;
 
@@ -170,7 +171,7 @@ body.home {
         color: var(--page-text);
         background-position: center top 10px;
         background-repeat: no-repeat;
-        background-size: 50%;
+        background-size: 120px;
         background-image: var(--image-ghcta-header);
 
         p {
@@ -188,6 +189,6 @@ body.home {
 
     &:hover {
         box-shadow: var(--ghcta-panel-shadow);
-        transform: scale(1.05);
+        transform: scale(1.025);
     }
 }
