Moved the `ghcta` into the `panel_button` file.

--- a/FrontEnd/main.scss
+++ b/FrontEnd/main.scss
@@ -43,3 +43,4 @@ $mobile-breakpoint: 740px;
 @import 'styles/spinner';
 @import 'styles/tab_bar';
 @import 'styles/supporters';
+@import 'styles/panel_button';
