--- a/FrontEnd/styles/panel_button.scss
+++ b/FrontEnd/styles/panel_button.scss
@@ -18,33 +18,41 @@
 
 .panel-button {
     max-width: 250px;
-    background-color: var(--panel-background);
+    background-color: var(--panel-button-background);
     transition: box-shadow 0.15s ease, transform 0.15s ease;
 
     a {
         display: block;
-        padding: 55px 0 0;
         color: var(--page-text);
-        background-position: center top 10px;
-        background-repeat: no-repeat;
-        background-size: 120px;
-        background-image: var(--image-ghcta-header);
 
         p {
             margin: 0;
             padding: 10px;
         }
 
-        .panel-button {
+        .cta {
             padding: 7px;
             text-align: center;
             color: white;
-            background-color: var(--ghcta-button-background);
         }
     }
 
     &:hover {
-        box-shadow: var(--ghcta-panel-shadow);
+        box-shadow: var(--panel-button-shadow);
         transform: scale(1.025);
+    }
+
+    &.ghcta {
+        a {
+            padding: 55px 0 0;
+            background-position: center top 10px;
+            background-repeat: no-repeat;
+            background-size: 120px;
+            background-image: var(--image-ghcta-header);
+
+            .cta {
+                background-color: var(--ghcta-panel-cta-background);
+            }
+        }
     }
 }
