--- a/FrontEnd/styles/panel_button.scss
+++ b/FrontEnd/styles/panel_button.scss
@@ -25,13 +25,14 @@
         display: block;
         color: var(--page-text);
 
-        p {
+        .body {
             margin: 0;
-            padding: 10px;
+            padding: 12px;
         }
 
         .cta {
-            padding: 7px;
+            padding: 4px;
+            font-size: 90%;
             text-align: center;
             color: var(--panel-button-text);
             background-color: var(--panel-cta-background);
@@ -47,6 +48,72 @@
     // Specific panel buttons.
     // -------------------------------------------------------------------------
 
+    &.scta {
+        position: relative;
+        margin-top: 20px;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: -20px;
+            left: -10px;
+            display: block;
+            width: 40px;
+            height: 35px;
+            background-repeat: no-repeat;
+            background-size: 100%;
+            background-image: var(--image-heart);
+        }
+
+        .avatars {
+            position: relative;
+            display: grid;
+            grid-template-columns: repeat(9, 1fr);
+            gap: 2px;
+            margin-top: 10px;
+
+            img {
+                justify-self: center;
+                width: 100%;
+                height: 100%;
+                border-radius: 100%;
+            }
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                background: var(--scta-avatar-gradient);
+            }
+        }
+
+        .cta {
+            color: var(--page-text);
+            background-color: var(--scta-panel-accent);
+        }
+    }
+
+    &.ccta {
+        .body {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            img {
+                display: block;
+                max-width: 180px;
+                margin: 0 auto;
+            }
+        }
+
+        .cta {
+            background-color: var(--ccta-panel-accent);
+        }
+    }
+
     &.ghcta {
         a {
             padding: 55px 0 0;
@@ -54,10 +121,10 @@
             background-repeat: no-repeat;
             background-size: 120px;
             background-image: var(--image-ghcta-header);
+        }
 
-            .cta {
-                background-color: var(--ghcta-panel-cta-background);
-            }
+        .cta {
+            background-color: var(--ghcta-panel-accent);
         }
     }
 }
