--- a/FrontEnd/styles/colors.scss
+++ b/FrontEnd/styles/colors.scss
@@ -154,10 +154,10 @@
     --panel-button-background: var(--very-light-grey);
     --panel-button-shadow: 0 3px 5px 5px rgba(0, 0, 0, 5%);
     --panel-button-text: var(--white);
-    --panel-cta-background: var(--dark-grey);
+    --panel-accent: var(--dark-grey);
 
     --scta-avatar-gradient: linear-gradient(rgba(241, 241, 241, 0%) 0, rgba(241, 241, 241, 0%) 50%, rgba(241, 241, 241, 100%) 100%);
-    --scta-panel-accent: var(--light-grey);
+    --scta-panel-accent: var(--pink);
     --ccta-panel-accent: var(--mid-blue);
     --ghcta-panel-accent: var(--pink);
 
