--- a/FrontEnd/styles/panel_button.scss
+++ b/FrontEnd/styles/panel_button.scss
@@ -18,24 +18,21 @@
 
 .panel-button {
     max-width: 250px;
-    background-color: var(--panel-button-background);
     transition: box-shadow 0.15s ease, transform 0.15s ease;
 
     a {
-        display: block;
+        display: flex;
+        flex-direction: column;
+        gap: 7px;
+        padding: 12px;
         color: var(--page-text);
-
-        .body {
-            margin: 0;
-            padding: 12px;
-        }
+        background-color: var(--panel-button-background);
+        border-left: 3px var(--panel-accent) solid;
 
         .cta {
-            padding: 4px;
             font-size: 90%;
-            text-align: center;
-            color: var(--panel-button-text);
-            background-color: var(--panel-cta-background);
+            text-align: right;
+            color: var(--link-text);
         }
     }
 
@@ -49,6 +46,7 @@
     // -------------------------------------------------------------------------
 
     &.scta {
+        --panel-accent: var(--scta-panel-accent);
         position: relative;
         margin-top: 20px;
 
@@ -56,7 +54,7 @@
             content: '';
             position: absolute;
             top: -20px;
-            left: -10px;
+            right: -10px;
             display: block;
             width: 40px;
             height: 35px;
@@ -89,42 +87,32 @@
                 background: var(--scta-avatar-gradient);
             }
         }
-
-        .cta {
-            color: var(--page-text);
-            background-color: var(--scta-panel-accent);
-        }
     }
 
     &.ccta {
+        --panel-accent: var(--ccta-panel-accent);
+
         .body {
             display: flex;
             flex-direction: column;
             gap: 10px;
+            align-items: center;
 
             img {
-                display: block;
                 max-width: 180px;
-                margin: 0 auto;
             }
-        }
-
-        .cta {
-            background-color: var(--ccta-panel-accent);
         }
     }
 
     &.ghcta {
-        a {
-            padding: 55px 0 0;
+        --panel-accent: var(--ghcta-panel-accent);
+
+        .body {
+            padding-top: 65px;
             background-position: center top 10px;
             background-repeat: no-repeat;
             background-size: 120px;
             background-image: var(--image-ghcta-header);
-        }
-
-        .cta {
-            background-color: var(--ghcta-panel-accent);
         }
     }
 }
