--- a/FrontEnd/styles/home.scss
+++ b/FrontEnd/styles/home.scss
@@ -22,6 +22,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
+    margin-top: 25px;
 
     h3 {
         margin: 5px 0;
@@ -44,37 +45,6 @@
 @media screen and (max-width: $mobile-breakpoint) {
     .recent {
         grid-template-columns: 1fr;
-    }
-}
-
-// Podcast CTA.
-
-.podcast {
-    position: relative;
-    margin: 20px 0 60px;
-    padding: 15px;
-    background-color: var(--podcast-panel-background);
-    border-bottom: 3px var(--podcast-panel-border) solid;
-
-    &::before {
-        content: '';
-        position: absolute;
-        top: -20px;
-        left: -20px;
-        display: block;
-        width: 40px;
-        height: 40px;
-        background-repeat: no-repeat;
-        background-size: 100%;
-        background-image: var(--image-podcast);
-    }
-
-    p {
-        margin: 0;
-    }
-
-    @media screen and (max-width: $mobile-breakpoint) {
-        margin-left: 20px;
     }
 }
 
