Added Apple at the top of the list of corporate sponsors.

--- a/FrontEnd/styles/supporters.scss
+++ b/FrontEnd/styles/supporters.scss
@@ -65,6 +65,10 @@
                 li {
                     justify-content: center;
                 }
+
+                &.solo {
+                    grid-template-columns: 1fr;
+                }
             }
 
             @media screen and (max-width: $mobile-breakpoint) {
