Converted to a regular GET/POST form and styled the page.

--- a/FrontEnd/main.scss
+++ b/FrontEnd/main.scss
@@ -43,3 +43,4 @@ $mobile-breakpoint: 740px;
 @import 'styles/tab_bar';
 @import 'styles/supporters';
 @import 'styles/panel_button';
+@import 'styles/validate_manifest';
