--- a/FrontEnd/styles/layout.scss
+++ b/FrontEnd/styles/layout.scss
@@ -68,9 +68,17 @@ main > .inner {
 
 .staging {
     padding: 10px;
-    font-weight: bold;
+    font-weight: 600;
     text-align: center;
-    text-transform: uppercase;
     color: var(--white);
     background-color: var(--mid-red);
+
+    a {
+        text-decoration: underline;
+        color: var(--white);
+
+        &:hover {
+            color: var(--header-link-highlight);
+        }
+    }
 }
