Styling for the new macros count.

--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -126,6 +126,10 @@
                 background-image: var(--image-plugins);
             }
 
+            li.macros {
+                background-image: var(--image-macros);
+            }
+
             li.keywords {
                 grid-column-start: span 2;
                 background-image: var(--image-tags);
